// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Text props 1`] = `
Object {
  "active": false,
  "colorMode": "default",
  "elementRef": [Function],
  "focus": false,
  "hover": false,
  "hoveractive": false,
  "ref": [Function],
  "style": Array [
    Object {
      "fontSize": 200,
    },
  ],
}
`;

exports[`composition render props should render correctly 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="font-size: 16px;"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for color 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(87, 79, 235); font-size: 16px;"
>
  hello world
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="font-size: 16px;"
>
  Hello world
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(87, 79, 235); font-size: 16px;"
>
  Hello world
</div>
`;

exports[`theming Text.styles.base should render correctly 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); font-size: 16px;"
>
  hello world
</div>
`;
